borrar anuncios y fixes
